--- a/src/pug/components/nav.pug
+++ b/src/pug/components/nav.pug
@@ -1,5 +1,5 @@
 mixin nav
-	nav.nav.container.container--wide
+	nav.nav.container.container--wide&attributes(attributes)
 		.nav__group.nav__group--left
 			.button-group.nav__item
 				- const activeRadio = 'hexa';
